Another small addition to the page

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,8 @@
 	<title>Hello, Coursera</title>
 </head>
 <body>
-<h1>Hi, I'm Srikrithi!</h1>
+<h1>Hello, Coursera!</h1>
+<br>
+<h2>I'm Srikrithi Srinivasan</h2>
 </body>
 </html>
